--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/viking.png">
 </head>
+
 <body>
     <main>
         <div class="img-block">
@@ -18,21 +20,27 @@
                 <p class="img-block__odin-text">Odin</p>
             </div>
             <p class="img-block__img-credit">
-                Photo by <a href="https://unsplash.com/@grakozy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Greg Rakozy</a> on <a href="https://unsplash.com/s/photos/background?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash <br> <a href="https://www.flaticon.com/free-icons/viking" title="viking icons">Odin icon created by Freepik - Flaticon</a></a>
+                Photo by <a
+                    href="https://unsplash.com/@grakozy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Greg
+                    Rakozy</a> on <a
+                    href="https://unsplash.com/s/photos/background?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash
+                    <br> <a href="https://www.flaticon.com/free-icons/viking" title="viking icons">Odin icon created by
+                        Freepik - Flaticon</a></a>
             </p>
         </div>
         <div class="form-block">
             <div class="form-block__para-container">
-                <p>This is a demo registration page! You know you need something like this in your life to help you realize your deepest dreams. Sign up <i>now</i> to get started. <br><br> You know you want to.</p>
+                <p>This is a demo registration page! You know you need something like this in your life to help you
+                    realize your deepest dreams. Sign up <i>now</i> to get started. <br><br> You know you want to.</p>
             </div>
             <div class="form-block__form-container">
                 <form action="">
                     <h3 class="form-header">Let's do this!</h3>
                     <p class="asterisk-para">Fields marked with an asterisk (*) are required</p>
                     <div class="input">
-                    <input type="text" id="first-name" placeholder=" ">
-                    <label for="first-name">First name</label>
-                    <p class="error-para"></p>
+                        <input type="text" id="first-name" placeholder=" ">
+                        <label for="first-name">First name</label>
+                        <p class="error-para"></p>
                     </div>
                     <div class="input last-name-input">
                         <input type="text" id="last-name" placeholder=" ">
@@ -44,14 +52,14 @@
                         <p class="error-para email-error"></p>
                     </div>
                     <div class="input phone-input">
-                        <input type="number" id="phone-number" placeholder=" ">
+                        <input min="0" type="number" id="phone-number" placeholder=" ">
                         <label for="phone-number">Phone number</label>
                     </div>
                     <div class="input">
                         <input type="password" id="password" required placeholder=" ">
                         <label class="password-label" for="password">Password</label>
                         <p class="error-para password-error">
-                            <span class="pass-at-least-eight check">🗴</span> Minimum 8 characters <br> 
+                            <span class="pass-at-least-eight check">🗴</span> Minimum 8 characters <br>
                             <span class="pass-at-least-num check">🗴</span> At least one letter <br>
                             <span class="pass-at-least-char check">🗴</span> At least one character <br>
                         </p>
@@ -76,4 +84,5 @@
         </div>
     </main>
 </body>
+
 </html>
